# fractalbits

./: .gitignore  Cargo.toml  justfile
.github/workflows/: ci.yml
crates/api_server/: Cargo.toml
crates/api_server/src/handler/: common.rs
crates/api_server/src/handler/common/: s3_error.rs
crates/api_server/src/handler/delete/: abort_multipart_upload.rs  delete_object.rs
crates/api_server/src/handler/get/: list_objects_v2.rs  list_parts.rs
crates/api_server/src/handler/post/: complete_multipart_upload.rs
crates/api_server/src/handler/put/: put_object.rs
crates/bench_rpc/: Cargo.toml
crates/common/data_blob_tracking/: Cargo.toml
crates/common/file_ops/: Cargo.toml
crates/common/file_ops/src/: lib.rs
crates/common/rpc_clients/bss/: Cargo.toml
crates/common/rpc_clients/client_common/: Cargo.toml
crates/common/rpc_clients/client_common/src/: generic_client.rs  lib.rs
crates/common/rpc_clients/nss/: Cargo.toml
crates/common/rpc_clients/rss/: Cargo.toml
crates/common/rpc_codecs/bss_codec/: Cargo.toml
crates/common/rpc_codecs/nss_codec/: Cargo.toml
crates/common/rpc_codecs/rss_codec/: Cargo.toml
crates/common/volume_group_proxy/: Cargo.toml
crates/common/volume_group_proxy/src/: data_vg_proxy.rs
crates/fs_server/: Cargo.toml
crates/fs_server/fractal-fuse/: Cargo.toml  README.md
crates/fs_server/fractal-fuse/examples/: hello.rs
crates/fs_server/fractal-fuse/src/: dispatch.rs  filesystem.rs  lib.rs  types.rs
crates/fs_server/fractal-nfs/src/: dispatch.rs  lib.rs  xdr.rs
crates/fs_server/src/: backend.rs  config.rs  error.rs  fs.rs  fuse_server.rs  main.rs  nfs_server.rs  vfs.rs
infra/fractalbits-bootstrap/src/: common.rs  gui_server.rs  root_server.rs  workflow.rs
xtask/: Cargo.toml
xtask/src/: cmd_build.rs  cmd_docker.rs  cmd_nightly.rs  cmd_precheckin.rs  cmd_run_tests.rs  cmd_service.rs  cmd_tool.rs  main.rs
xtask/src/cmd_deploy/: bootstrap_progress.rs  build.rs  create_cluster.rs  docker_host.rs  ssm_bootstrap.rs  ssm_utils.rs  vpc.rs
xtask/src/cmd_run_tests/: fs_server.rs  leader_election.rs  nss_ha_failover.rs
xtask/src/cmd_run_tests/fs_server/: fuse.rs  nfs.rs
