[package]
name = "rpc_client_bss"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["rpc_client_common/tokio-runtime"]
compio-runtime = ["rpc_client_common/compio-runtime"]

[dependencies]
bytes.workspace = true
tracing.workspace = true
uuid.workspace = true
fake.workspace = true
rpc_client_common.workspace = true
bss_codec.workspace = true
rpc_codec_common.workspace = true
data_types.workspace = true

[dev-dependencies]
tracing-test.workspace = true
xxhash-rust.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
