[package]
name = "rpc_client_nss"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["rpc_client_common/tokio-runtime"]
compio-runtime = ["rpc_client_common/compio-runtime"]

[dependencies]
prost.workspace = true
bytes.workspace = true
data_types.workspace = true
tracing.workspace = true
rpc_client_common.workspace = true
nss_codec.workspace = true
rpc_codec_common.workspace = true
