[package]
name = "rpc_client_rss"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["rpc_client_common/tokio-runtime"]
compio-runtime = ["rpc_client_common/compio-runtime"]
metrics = ["metrics_wrapper/metrics", "dep:metrics"]

[dependencies]
serde_json.workspace = true
prost.workspace = true
bytes.workspace = true
tracing.workspace = true
metrics_wrapper.workspace = true
metrics = { workspace = true, optional = true }
rpc_client_common.workspace = true
rss_codec.workspace = true
rpc_codec_common.workspace = true
data_types.workspace = true

[dev-dependencies]
tracing-test.workspace = true
